--- a/listing/templates/listing/search.html
+++ b/listing/templates/listing/search.html
@@ -4,71 +4,10 @@
 {% block title %} Search Result {% endblock %}
 
 {% block content %}
-<main class="mt-9">
-    <form method="GET" action="{% url 'listing:search_listing' %}" id="filter-form" class="relative filter responsive-padding bg-white flex flex-col lg:flex-row lg:items-center gap-3 lg:gap-6  mb-8" x-data>
-        <div class="relative flex gap-6 justify-start py-2">
-            <input hidden type="search" name="search_query" value="{{ search_query }}" aria-label="Search" class="block w-full px-4 py-2 focus:outline-none">
-            <select name="listing_type" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
-                <option value="">Any</option>
-                <option value="buy" {% if listing_type == 'buy' %}selected{% endif %}>Buy</option>
-                <option value="rent" {% if listing_type == 'rent' %}selected{% endif %}>Rent</option>
-                <option value="land" {% if listing_type == 'land' %}selected{% endif %}>Land</option>
-            </select>
+<main class="mt-9">   
         
-            <!-- for price -->
-            <div x-data="{ isOpen:false }" class="relative">
-                <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">Price</button>
-                
-                <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition class="absolute transition bg-white shadow-[0px_4px_4px_0px_rgba(0,0,0,0.75)] rounded-md p-4 z-[100] top-full left-0 md:left-1/2 w-full min-w-[250px] ">
-                    <div>
-                        <label for="min_price">Min:</label>
-                        <input class="input-primary" type="number" name="min_price" value="{{ min_price }}">
-                    </div>
-                    <div>
-                        <label for="max_price">Max:</label>
-                        <input class="input-primary" type="number" name="max_price" value="{{ max_price }}">
-                    </div>
-                </div>
-            </div>
-
-            
-
-            <!-- for states -->
-            <div x-data="{ isOpen:false, states: [] }" x-init="states = window.nigerianStates" class="relative">
-                <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">Location</button>
-        
-                <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition id="statesCheckBox" class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full min-w-[250px] w-auto flex flex-col gap-4">
-
-                <div class="flex flex-col gap-2">
-                    <label for="state_location" class="font-semibold">State</label>
-                    <select id="state_location" name="state" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
-                        <option value="">Any</option>
-                        {% for state in nigeria_states %}
-                            <option value="{{ state }}" {% if state == selectedState %}selected{% endif %}>{{ state }} </option>
-                        {% endfor %}
-                    </select>
-                </div>
-                    
-<!-- 
-                    <div class="flex flex-col gap-2">
-                        <label for="lga_location" class="font-semibold">LGA</label>
-                        <select x-data="{ states: [] }" x-init="states = window.nigerianStates" id="lga_location" name="lga_location" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
-                            <option value="">Any</option>
-                        </select>
-                    </div> -->
-                    
-
-                </div>
-            </div>
-
-        </div>
-        
-        {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" %} {% endcomponent %}
-        
-    </form>
-
-
-    <div id="listing-container" class="responsive-padding grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">   
+    <div id="listing-container" class="responsive-padding grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">  
+        {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" attr="onclick='openModal_search_fiters()'" %} {% endcomponent %} 
     
         {% if results %}
             {% for result in results %}
@@ -89,10 +28,66 @@
    
 </main>
 
+
+    {% component "modal" modal_type="search_fiters" modal_title="Filters" %}
+        {% fill "children" %}
+        <form method="GET" action="{% url 'listing:search_listing' %}" id="filter-form" class="p-4 flex flex-col gap-2" x-data>
+            <section>
+                <input hidden type="search" name="search_query" value="{{ search_query }}" aria-label="Search">
+                <h5 class="font-bold">Type</h5>
+                <select name="listing_type" class="block input-primary">
+                    <option value="">Any</option>
+                    <option value="buy" {% if listing_type == 'buy' %}selected{% endif %}>Buy</option>
+                    <option value="rent" {% if listing_type == 'rent' %}selected{% endif %}>Rent</option>
+                    <option value="land" {% if listing_type == 'land' %}selected{% endif %}>Land</option>
+                </select>
+            </section>
+
+            <!-- for price -->
+            <section>
+                <h5 class="font-bold">Price</h5>
+                <div class="flex gap-x-2">
+                    <div>
+                        <input class="input-primary" type="number" name="min_price" value="{{ min_price }}">
+                        <label class="label-primary" for="min_price">Min:</label>
+                    </div>
+                    <div>
+                        <input class="input-primary" type="number" name="max_price" value="{{ max_price }}">
+                        <label class="label-primary" for="max_price">Max:</label>
+                    </div>
+                </div>
+            </section>
+
+
+                    
+                    
+            <!-- for states -->
+            <section>
+                <div class="flex flex-col gap-2">
+                    <label for="state_location" class="font-bold">State</label>
+                    <select id="state_location" name="state" class="input-primary">
+                        <option value="">Any</option>
+                        {% for state in nigeria_states %}
+                            <option value="{{ state }}" {% if state == selectedState %}selected{% endif %}>{{ state }} </option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </section>
+
+            {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="mt-4 px-4 py-1 ml-auto" %} {% endcomponent %}
+        </form>
+            
+        
+
+        {% endfill %}
+    {% endcomponent %}
+
 {% endblock %}
 
 {% block script %}
 <script>
+
+    // for loading more listings instead of traditional previous and next button
     document.getElementById('load-more').addEventListener('click', function() {
         let nextPage = this.getAttribute('data-next-page');
         let loadMoreContainer = document.getElementById('load-more-container'); 
