--- a/static/css/input.css
+++ b/static/css/input.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Architects+Daughter&display=swap');
 
-
+@import "tailwindcss" source(none);
 
 @source '../../**/templates/**/*.html';
 @source '../../components/**/*.html';
@@ -64,8 +64,9 @@
     }
     
     .input-primary {
-        @apply shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none;
+        @apply shadow border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:border-blue-500;
     }
+    
 
     .scrollbar-none::-webkit-scrollbar {
       display: none;
