--- a/adminv2/templates/adminv2/base.html
+++ b/adminv2/templates/adminv2/base.html
@@ -14,12 +14,12 @@
     <div x-data="{ isOpen:false }" class="wrapper relative grid grid-cols-1 lg:grid-cols-4 bg-slate-200 lg:p-4">
 
         <!-- Nav bar -->
-        <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:block h-screen bg-white flex flex-col gap-5 p-4 lg:sticky top-0 lg:col-span-1 z-[100000]">
+        <nav x-cloak :class="isOpen ? 'absolute' : 'hidden'" class="w-2/3 md:max-w-56 lg:w-full lg:flex h-screen bg-white flex flex-col gap-5 p-4 lg:sticky top-0 lg:col-span-1 z-[100000]">
             <div class="flex gap-2">
                 <img class="block w-16" src="{% static 'images/eaglespoint-logo.png' %}">
                 <!-- <span>EaglesPoint</span> -->
             </div>
-            <ul class="flex flex-col gap-1 h-full *:font-medium *:py-2 *px-1 *:rounded-md *:hover:bg-slate-100">
+            <ul class="flex flex-col gap-1 h-max *:font-medium *:py-2 *px-1 *:rounded-md *:hover:bg-slate-100">
                 <li>
                     <a class="w-full flex gap-1" href="{% url 'adminv2:dashboard' %}">
                         <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="currentColor"><path d="M140-520v-300h300v300H140Zm0 380v-300h300v300H140Zm380-380v-300h300v300H520Zm0 380v-300h300v300H520ZM200-580h180v-180H200v180Zm380 0h180v-180H580v180Zm0 380h180v-180H580v180Zm-380 0h180v-180H200v180Zm380-380Zm0 200Zm-200 0Zm0-200Z"/></svg>
