--- a/user/templates/user/password_reset_complete.html
+++ b/user/templates/user/password_reset_complete.html
@@ -1,14 +1,10 @@
 {% extends "core/base.html" %}
 {% block content %}
-    <div class="container my-3 p-3">
-        <div class="row justify-content-center">
-            <div class="col-lg-5">
-                <div class="card shadow-lg border-0 rounded-lg mt-0 mb-3">
-                    <div class="alert alert-info">
-                        Your password has been set. You may go ahead and <a href="{% url 'user:login' %}">Login Here</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+<main class="responsive-padding flex flex-col items-center mt-9">
+    <div class="border-2 border-blue-400 rounded-2xl p-8 flex flex-col items-center w-full max-w-[400px] text-center gap-2">
+        <h1 class="text-2xl font-bold">Your Password has been Reset</h1>
+        {% component "button" html_tag="a" label="Go to Login" type="primary" width="max" href="{% url 'user:login' %}" %} {% endcomponent %}
     </div>
+</main>
 {% endblock content %}
