--- a/listing/templates/listing/details.html
+++ b/listing/templates/listing/details.html
@@ -120,9 +120,9 @@
         
 
         <section class="bg-white w-full md:col-span-1 md:sticky md:top-12 lg:bottom-0 pt-8 self-start fixed bottom-0 left-0">
-            <div class="flex flex-col gap-6 overflow-hidden p-3 lg:p-8 rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] outline-1 outline-offset-[-1px] outline-[#314158]">
+            <div class="flex flex-col gap-6 overflow-hidden p-3 lg:p-4 rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)] outline-1 outline-offset-[-1px] outline-[#314158]">
                 <div class="flex justify-between">
-                    <h2 class="w-2/3 text-xl font-bold">{{ listing.title }}</h2>
+                    <h2 class="w-2/3 text-lg line-clamp-2 font-bold">{{ listing.title }}</h2>
 
                     <div class="flex gap-2">
                         <button class="cursor-pointer">
