--- a/listing/templates/listing/search.html
+++ b/listing/templates/listing/search.html
@@ -4,9 +4,9 @@
 {% block title %} Search Result {% endblock %}
 
 {% block content %}
-<main class="mt-9">   
+<main class="mt-9 responsive-padding">   
     {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" attr="onclick='openModal_search_fiters()'" %} {% endcomponent %} 
-    <div id="listing-container" class="responsive-padding grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">  
+    <div id="listing-container" class="mt-6 grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">  
     
         {% if results %}
             {% for result in results %}
