--- a/static/css/input.css
+++ b/static/css/input.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&family=Architects+Daughter&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @import "tailwindcss" source(none);
 
@@ -11,9 +11,9 @@
 
 @theme {
 
-  --font-base: 'Alegreya';
-  --font-header: 'Alegreya';
-  --font-cursive: 'Architects Daughter'
+  --font-base: 'Hanken Grotesk';
+  --font-header: 'Hanken Grotesk';
+  --font-cursive: 'Architects Daughter', cursive;
   
 }
 
